--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -1,6 +1,42 @@
 @use "./scss/layout.scss";
+@use "./scss/button.scss";
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
   font-family: sans-serif;
+}
+
+div[ng-view] {
+  flex: 1;
+  display: flex;
+  flex-flow: column;
+}
+
+main {
+  padding: 0.5em;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  gap: 0.5em;
+
+  width: 100%;
+  max-width: 100ch;
+  margin: 0 auto;
+
+  &.home {
+    flex: 1;
+    justify-content: center;
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  p {
+    align-self: stretch;
+  }
 }
