--- a/front/src/scss/layout.scss
+++ b/front/src/scss/layout.scss
@@ -48,6 +48,7 @@ app {
     justify-content: center;
 
     a {
+      padding: 0.5em 1em;
       text-decoration: inherit;
       color: inherit;
 
