dev: form field required

--- a/front/src/scss/form.scss
+++ b/front/src/scss/form.scss
@@ -14,6 +14,10 @@ form {
       padding: 0.5em 1em;
       border: 0.1em solid #bbb;
       border-radius: 0.3em;
+
+      &.ng-invalid.ng-touched {
+        border-color: red;
+      }
     }
   }
 
